/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine_examples.shareaware.market;

import "spine/options.proto";

option (type_url_prefix) = "type.shareaware.spine.io";
option java_package = "io.spine.examples.shareaware.market";
option java_outer_classname = "SharesPriceMovementPerMinuteProto";
option java_multiple_files = true;

import "spine_examples/shareaware/identifiers.proto";
import "google/protobuf/timestamp.proto";
import "spine/money/money.proto";

// Displays the share price movement per minute on a timeline.
message SharePriceMovementPerMinute {
    option (entity) = {kind: PROJECTION};

    // The ID of the share price movement.
    SharePriceMovementId id = 1;

    // The share ID price movement of which to display.
    ShareId share = 2 [(required) = true, (column) = true];

    // The list of the price-to-time points.
    repeated PriceAtTime priceAtTime = 3 ;
}

// The share price at a particular time.
message PriceAtTime {

    // The share price.
    spine.money.Money price = 1 [(required) = true];

    // The time when the share price was set.
    google.protobuf.Timestamp time = 2 [(required) = true];
}
